--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_localizations:
-    sdk: flutter  
+    sdk: flutter
+  image_picker: ^0.8.4+4    
 
   # Firebase
   firebase_auth: ^3.1.0
