--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,12 +25,14 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  image_picker: ^0.8.4+4    
+  image_picker: ^0.8.4+4 
+  path_provider: ^2.0.8  
 
   # Firebase
   firebase_auth: ^3.1.0
   cloud_firestore: ^2.5.1
   firebase_core: ^1.6.0
+  firebase_storage: ^10.2.4
 
   # Logic
   bloc: ^7.1.0
