--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,8 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   image_picker: ^0.8.4+4 
-  path_provider: ^2.0.8  
+  path_provider: ^2.0.8
+  photo_view: ^0.13.0  
 
   # Firebase
   firebase_auth: ^3.1.0
