--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_bloc: ^7.2.0
   equatable: ^2.0.3
   freezed: ^1.0.0
+  dartz: ^0.10.1
+  freezed_annotation: ^1.1.0
 
   # System Interfaces
   url_launcher: ^6.0.10
@@ -67,7 +69,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  mockito: ^5.0.15 
+  mockito: ^5.0.15
+  build_runner: ^2.1.7 
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
