--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,9 @@ dependencies:
     sdk: flutter
   image_picker: ^0.8.4+4 
   path_provider: ^2.0.8
-  photo_view: ^0.13.0  
+  photo_view: ^0.13.0
+  another_flushbar: ^1.10.28
+  uuid: ^3.0.5  
 
   # Firebase
   firebase_auth: ^3.1.0
@@ -70,7 +72,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   mockito: ^5.0.15
-  build_runner: ^2.1.7 
+  build_runner: ^2.1.7
+  injectable_generator: ^1.5.3 
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
