--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,9 @@ dependencies:
   path_provider: ^2.0.8
   photo_view: ^0.13.0
   another_flushbar: ^1.10.28
-  uuid: ^3.0.5  
+  uuid: ^3.0.5
+  auto_route: ^3.2.2
+  auto_route_generator: ^3.2.1  
 
   # Firebase
   firebase_auth: ^3.1.0
