--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.15.1 <3.0.0"
 
 dependencies:
   flutter:
@@ -31,7 +31,8 @@ dependencies:
   another_flushbar: ^1.10.28
   uuid: ^3.0.5
   auto_route: ^3.2.2
-  auto_route_generator: ^3.2.1  
+  auto_route_generator: ^3.2.1
+  flutter_native_splash: ^2.0.1+1
 
   # Firebase
   firebase_auth: ^3.1.0
@@ -75,7 +76,13 @@ dev_dependencies:
     sdk: flutter
   mockito: ^5.0.15
   build_runner: ^2.1.7
-  injectable_generator: ^1.5.3 
+  injectable_generator: ^1.5.3
+  
+flutter_native_splash:
+  color: "#121a33"
+  image: assets/splash.png
+  android: true
+  ios: true    
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
