--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   auto_route: ^3.2.2
   auto_route_generator: ^3.2.1
   flutter_native_splash: ^2.0.1+1
+  screenshot: ^1.2.3
 
   # Firebase
   firebase_auth: ^3.1.0
