--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   auto_route_generator: ^3.2.1
   flutter_native_splash: ^2.0.1+1
   screenshot: ^1.2.3
+  image_gallery_saver: ^1.7.1
+  permission_handler: ^8.3.0
 
   # Firebase
   firebase_auth: ^3.1.0
