--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   screenshot: ^1.2.3
   image_gallery_saver: ^1.7.1
   permission_handler: ^8.3.0
+  pdf: ^3.7.1
+  fluttertoast: ^8.0.8
 
   # Firebase
   firebase_auth: ^3.1.0
