--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.profi_neon">
+  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+  <uses-permission android:name="android.permission.INTERNET" />
+
    <application
         android:label="MyKitchen"
         android:icon="@mipmap/ic_launcher">
@@ -37,5 +41,14 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+            <provider
+        android:name="androidx.core.content.FileProvider"
+        android:authorities="com.example.build_my_kitchen.fileprovider"
+        android:exported="false"
+        android:grantUriPermissions="true">
+        <meta-data
+            android:name="android.support.FILE_PROVIDER_PATHS"
+            android:resource="@xml/provider_paths" />
+    </provider>
     </application>
 </manifest>
