--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -41,6 +41,8 @@
 		</array>
 		<key>UIViewControllerBasedStatusBarAppearance</key>
 		<false/>
+		 <key>LSSupportsOpeningDocumentsInPlace</key>
+    <true/>
 		<key>NSPhotoLibraryUsageDescription</key>
 		<String>To take user profile image</String>
 		<key>NSCameraUsageDescription</key>
